--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- header -->
     <section class="header">
         <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-        <span>Call us now (021) 99215740</span>
+        <span class=".phone-number">Call us now (021) 99215740</span>
     </section>
     <!-- navbar start -->
     <nav>
@@ -137,7 +137,7 @@
             <div class="count-flex">
                 <i style="font-size: 50px; color: hsl(135, 33%, 36%); padding: 30px;" class="fas fa-award"></i>
                 <span data-purecounter-start="0" data-purecounter-end="1113006" data-purecounter-duration="0"
-                    style="font-size: 42px; font-weight: bold;" class="purecounter">1113006</span>
+                    style="font-size: 42px; font-weight: bold;" class="purecounter">111306</span>
             </div>
             <p class="count-para">Radiology</p>
             <p class="count-date">2023-24</p>
