Home, About & Services

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -110,7 +109,7 @@
             <div class="count-flex">
                 <i style="font-size: 50px; color: hsl(135, 33%, 36%); padding: 30px;" class="fas fa-user-md"></i>
                 <span data-purecounter-start="0" data-purecounter-end="532005" data-purecounter-duration="0"
-                    style="font-size: 42px; font-weight: bold;" class="purecounter">532005</span>
+                    style="font-weight: bold;" class="purecounter">532005</span>
             </div>
             <p class="count-para">Medicine Emergency</p>
             <p class="count-date">2023-24</p>
@@ -119,7 +118,7 @@
             <div class="count-flex">
                 <i style="font-size: 50px; color: hsl(135, 33%, 36%); padding: 30px;" class="far fa-hospital"></i>
                 <span data-purecounter-start="0" data-purecounter-end="72704" data-purecounter-duration="0"
-                    style="font-size: 42px; font-weight: bold;" class="purecounter">72704</span>
+                    style="font-weight: bold;" class="purecounter">72704</span>
             </div>
             <p class="count-para">Indoor Patient</p>
             <p class="count-date">2023-24</p>
@@ -128,7 +127,7 @@
             <div class="count-flex">
                 <i style="font-size: 50px; color: hsl(135, 33%, 36%); padding: 30px;" class="fas fa-flask"></i>
                 <span data-purecounter-start="0" data-purecounter-end="1473002" data-purecounter-duration="0"
-                    style="font-size: 42px; font-weight: bold;" class="purecounter">147300</span>
+                    style="font-weight: bold;" class="purecounter">147300</span>
             </div>
             <p class="count-para">Out Patient Department</p>
             <p class="count-date">2023-24</p>
@@ -137,7 +136,7 @@
             <div class="count-flex">
                 <i style="font-size: 50px; color: hsl(135, 33%, 36%); padding: 30px;" class="fas fa-award"></i>
                 <span data-purecounter-start="0" data-purecounter-end="1113006" data-purecounter-duration="0"
-                    style="font-size: 42px; font-weight: bold;" class="purecounter">111306</span>
+                    style="font-weight: bold;" class="purecounter">111306</span>
             </div>
             <p class="count-para">Radiology</p>
             <p class="count-date">2023-24</p>
@@ -185,7 +184,7 @@
         </cards>
     </section>
     <!-- /* DOCTOR SECTION END */ -->
-
+<!-- FOOTER START -->
     <footer>
         <div class="left">
             <div class="footer-logo"><img src="/assets/logo.png" class="footer-logo"></div>
