--- a/tender.html
+++ b/tender.html
@@ -7,7 +7,7 @@
     <title>Civil Hospital Karachi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="tender.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
@@ -55,52 +55,29 @@
     <!-- navbar end -->
     <section class="House-Job-Section">
         <div class="house-job-container">
-            <h1 class="house-job-title">CONTACT US</h1>
+            <h1 class="house-job-title">TENDER</h1>
         </div>
     </section>
-<section class="map-section">
-    <div class="map-container">
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1810.0264913889368!2d67.01110148213961!3d24.862039954275232!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e106b3b43bf%3A0x5eb5d6051bdeea6!2sCivil%20Hospital%20Rd%2C%20Karachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2sus!4v1728824631255!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+<section class="card-grid">
+    <div class="card">
+        <i class="fa-solid fa-bell"></i></i>
+        <a class="flex-ancor" href="tender.html"><h3 class="card-title">Tender</h3></a>
+    </div>
+    <div class="card">
+        <i class="fa-solid fa-newspaper"></i>
+        <a class="flex-ancor" href="https://chk.gov.pk/nit/nit.pdf"><h3 class="card-title">NIT</h3></a>
+    </div>
+    <div class="card">
+        <i class="fas fa-search"></i>
+    <a class="flex-ancor" href="tender.html"><h3 class="card-title">Budding Documents</h3></a>
+    </div>
+    <div class="card">
+        <i class="fas fa-search"></i>
+    <a class="flex-ancor" href="https://chk.gov.pk/advertisement/advertisement.pdf"><h3 class="card-title">Advertisement</h3></a>
     </div>
 </section>
 
-<section class="contact-form-section">
-    <div class="contact-form-container-1">
-        <div class="address">
-            <i class="fa-solid fa-location-dot"></i>
-            <h4 class="container-title">Our Address</h4>
-            <span class="container-text">Mission Rd، near Civil Hospital Masjid, New Labour Colony Nanakwara, Karachi, Karachi City, Sindh</span>
-        </div>
-        <div class="flex-env-call">
-        <div class="email">
-            <i class="fa-solid fa-envelope"></i>
-            <span class="container-text">info@chk.gov.pk</span>
-        </div>
-        <div class="call">
-            <i class="fa-solid fa-phone"></i>
-            <span class="container-text">(021) 99215740</span>
-        </div>
-    </div>
-    </div>
-    <div class="contact-form-container-2">
-        <div class="input-field">
-        <input type="text" name="username" id="username" placeholder="Your Name">
-        <input type="email" name="email" id="email" placeholder="Your Email">
-    </div>
-    <div class="sub-field">
-        <input type="text" id="subject" placeholder="Subject">
-    </div>
-    <div class="message-box">
-        <textarea id="message" placeholder="Message" maxlength="300"  oninput="updateCharacterCount()"></textarea>
-        <div class="character-count">
-            <span id="charCount">300</span> characters left
-        </div>
-    </div>
-    <div class="submit-div">
-        <input type="submit" value="Send Message" id="submit_btn">
-    </div>
-    </div>
-</section>
 <!-- FOOTER START -->
     <footer>
         <div class="left">
